# cmake-libsodium

./: CMakeLists.txt  README.md  main.cpp
